# loggy-server-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.override.yaml  docker-compose.yaml
.devcontainer/: devcontainer.json  docker-compose.yml
src/: main.rs
