[package]
name = "loggy-server-rs"
version = "0.1.0"
authors = ["Brennon Loveless <brennon.loveless@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.123"
serde_json = "1.0.61"
chrono = "0.4.19"
env_logger = "0.8.2"
mongodb = "1.1.1"
